--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "axios": "^1.6.7",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -46,10 +48,13 @@
     "happy-dom": "^15.11.7",
     "postcss": "^8.5.3",
     "prettier": "3.1.1",
+    "sass-embedded": "^1.88.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.1"
+    "vitest": "^1.6.1",
+    "@types/express": "^4.17.21",
+    "@types/axios": "^0.14.0"
   }
 }
